[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standalone-qwen3-from-scratch"
version = "0.1.0"
description = "Standalone Qwen3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.1",
]

[project.scripts]
start = "main:main"
